Add testing workflow

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ packages = find:
 python_requires = >=3.8
 install_requires =
     numpy>=1.20
+    scipy>=1.7.0
 
 [options.packages.find]
 exclude =
@@ -13,5 +14,5 @@ exclude =
     
 [options.extras_require]
 dev =
-    numpy >= 1.22
     pytest >= 7
+    simdkalman
